// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`UrlBoxComponent > should render correctly 1`] = `
<div
  id="root1"
  ng-version="20.3.3"
>
  <div
    class="url-box"
  >
    <div
      class="url-box__method-wrapper"
    >
      <button
        class="url-box__button url-box__button--method"
        nz-dropdown=""
        nztrigger="click"
        track-id="http_verb"
        type="button"
        value="POST"
      >
         POST 
      </button>
      <!--container-->
      <nz-dropdown-menu>
        <ul
          nz-menu=""
        >
          <li
            nz-menu-item=""
            value="0"
          >
             POST 
          </li>
          <!--container-->
          <li
            nz-menu-item=""
            value="0"
          >
             GET 
          </li>
          <!--container-->
          <li
            nz-menu-item=""
            value="0"
          >
             PUT 
          </li>
          <!--container-->
          <li
            nz-menu-item=""
            value="0"
          >
             DELETE 
          </li>
          <!--container-->
          <!--container-->
        </ul>
        <!--container-->
      </nz-dropdown-menu>
    </div>
    <div
      class="url-box__input-container"
    >
      <!--container-->
      <app-x-input
        class="url-box__input"
        placeholder="Enter URL"
        track-id="set_url"
      />
      <!--container-->
      <app-request-loader />
    </div>
    <div
      class="url-box__input-actions"
    >
      <!--container-->
      <button
        class="url-box__button"
        nz-tooltip=""
        nztooltipplacement="bottom"
        track-id="save_to_collection"
        type="button"
      >
        <app-icon
          name="plus-circle"
        />
      </button>
      <!--container-->
      <button
        class="url-box__button"
        nz-tooltip=""
        nztooltipplacement="bottom"
        track-id="export_window"
        type="button"
      >
        <app-icon
          name="file-down"
        />
      </button>
      <!--container-->
      <button
        class="url-box__button"
        nz-tooltip=""
        nztooltipplacement="bottom"
        track-id="reload_docs"
        type="button"
      >
        <app-icon
          name="refresh-ccw"
        />
      </button>
      <!--container-->
      <button
        class="url-box__button"
        track-id="show_docs"
        type="button"
      >
          
      </button>
    </div>
    <div
      class="send-request__wrapper"
    >
      <button
        class="app-button active-primary send-request__button"
        track-id="set_request"
        type="button"
      >
        <!--container-->
        <span>
          
        </span>
        <!--container-->
      </button>
      <!--container-->
      <!--container-->
      <nz-dropdown-menu>
        <ul
          nz-menu=""
        >
          <!--container-->
          <li
            nz-menu-item=""
          >
              
          </li>
          <!--container-->
        </ul>
        <!--container-->
      </nz-dropdown-menu>
    </div>
  </div>
  <!--container-->
</div>
`;

exports[`UrlBoxComponent > should render correctly with queryOperations > 1 1`] = `
<div
  id="root2"
  ng-version="20.3.3"
>
  <div
    class="url-box"
  >
    <div
      class="url-box__method-wrapper"
    >
      <button
        class="url-box__button url-box__button--method"
        nz-dropdown=""
        nztrigger="click"
        track-id="http_verb"
        type="button"
        value="POST"
      >
         POST 
      </button>
      <!--container-->
      <nz-dropdown-menu>
        <ul
          nz-menu=""
        >
          <li
            nz-menu-item=""
            value="0"
          >
             POST 
          </li>
          <!--container-->
          <li
            nz-menu-item=""
            value="0"
          >
             GET 
          </li>
          <!--container-->
          <li
            nz-menu-item=""
            value="0"
          >
             PUT 
          </li>
          <!--container-->
          <li
            nz-menu-item=""
            value="0"
          >
             DELETE 
          </li>
          <!--container-->
          <!--container-->
        </ul>
        <!--container-->
      </nz-dropdown-menu>
    </div>
    <div
      class="url-box__input-container"
    >
      <!--container-->
      <app-x-input
        class="url-box__input"
        placeholder="Enter URL"
        track-id="set_url"
      />
      <!--container-->
      <app-request-loader />
    </div>
    <div
      class="url-box__input-actions"
    >
      <!--container-->
      <button
        class="url-box__button"
        nz-tooltip=""
        nztooltipplacement="bottom"
        track-id="save_to_collection"
        type="button"
      >
        <app-icon
          name="plus-circle"
        />
      </button>
      <!--container-->
      <button
        class="url-box__button"
        nz-tooltip=""
        nztooltipplacement="bottom"
        track-id="export_window"
        type="button"
      >
        <app-icon
          name="file-down"
        />
      </button>
      <!--container-->
      <button
        class="url-box__button"
        nz-tooltip=""
        nztooltipplacement="bottom"
        track-id="reload_docs"
        type="button"
      >
        <app-icon
          name="refresh-ccw"
        />
      </button>
      <!--container-->
      <button
        class="url-box__button"
        track-id="show_docs"
        type="button"
      >
          
      </button>
    </div>
    <div
      class="send-request__wrapper"
    >
      <!--container-->
      <button
        class="app-button active-primary send-request__button"
        nz-dropdown=""
        nzplacement="bottomRight"
        nztrigger="click"
        track-id="send_request"
        type="button"
      >
        <!--container-->
        <!--container-->
        <span>
          
        </span>
        <!--container-->
        <!--container-->
        <!--container-->
        <!--container-->
        <app-icon
          name="chevron-down"
        />
      </button>
      <!--container-->
      <!--container-->
      <nz-dropdown-menu>
        <ul
          nz-menu=""
        >
          <li
            nz-menu-item=""
          >
             operation 1 
          </li>
          <!--container-->
          <li
            nz-menu-item=""
          >
             operation 2 
          </li>
          <!--container-->
          <!--container-->
          <li
            nz-menu-item=""
          >
              
          </li>
          <!--container-->
        </ul>
        <!--container-->
      </nz-dropdown-menu>
    </div>
  </div>
  <!--container-->
</div>
`;
